--- a/frontend/build-RWStation-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Makefile
+++ b/frontend/build-RWStation-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Makefile
@@ -190,6 +190,7 @@ Makefile: ../RWStation/RWStation.pro ../../../../Qt/6.5.0/mingw_64/mkspecs/win32
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/qt_config.prf \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/win32-g++/qmake.conf \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/exclusive_builds.prf \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/toolchain.prf \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/default_pre.prf \
@@ -217,9 +218,9 @@ Makefile: ../RWStation/RWStation.pro ../../../../Qt/6.5.0/mingw_64/mkspecs/win32
 		../RWStation/RWStation.pro \
 		../../../../Qt/6.5.0/mingw_64/lib/Qt6Widgets.prl \
 		../../../../Qt/6.5.0/mingw_64/lib/Qt6Gui.prl \
+		../../../../Qt/6.5.0/mingw_64/lib/Qt6Sql.prl \
 		../../../../Qt/6.5.0/mingw_64/lib/Qt6Core.prl \
 		../../../../Qt/6.5.0/mingw_64/lib/Qt6EntryPoint.prl \
-		.qmake.stash \
 		../../../../Qt/6.5.0/mingw_64/mkspecs/features/build_pass.prf
 	$(QMAKE) -o Makefile ..\RWStation\RWStation.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/spec_pre.prf:
@@ -342,6 +343,7 @@ Makefile: ../RWStation/RWStation.pro ../../../../Qt/6.5.0/mingw_64/mkspecs/win32
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/qt_config.prf:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/win32-g++/qmake.conf:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/exclusive_builds.prf:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/toolchain.prf:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/default_pre.prf:
@@ -369,9 +371,9 @@ Makefile: ../RWStation/RWStation.pro ../../../../Qt/6.5.0/mingw_64/mkspecs/win32
 ../RWStation/RWStation.pro:
 ../../../../Qt/6.5.0/mingw_64/lib/Qt6Widgets.prl:
 ../../../../Qt/6.5.0/mingw_64/lib/Qt6Gui.prl:
+../../../../Qt/6.5.0/mingw_64/lib/Qt6Sql.prl:
 ../../../../Qt/6.5.0/mingw_64/lib/Qt6Core.prl:
 ../../../../Qt/6.5.0/mingw_64/lib/Qt6EntryPoint.prl:
-.qmake.stash:
 ../../../../Qt/6.5.0/mingw_64/mkspecs/features/build_pass.prf:
 qmake: FORCE
 	@$(QMAKE) -o Makefile ..\RWStation\RWStation.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
