--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
     ports:
       - "5436:5432"
     volumes:
+      - ./database:/home/database
       - ./.database/postgres/data:/var/lib/postgresql/data
